Added next page and poper video search api variables.
